refactor: merge NewUserDTO and UpdateUserDTO into SimpleUserDTO
